--- a/resources/assets/sass/components/_color.scss
+++ b/resources/assets/sass/components/_color.scss
@@ -20,7 +20,8 @@ $materialize-red: (
   "darken-4":   #8b1014,
 );
 $default-white: (
-  "base": #f7f7f7);
+  "base": #f7f7f7
+  );
 $red: (
   "base":       #F44336,
   "lighten-5":  #FFEBEE,
