--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -110,11 +110,31 @@ body{
 }
 ul {
 	li{
-		a{
+		a{	
+			position: relative;
 			color: #8bc53f;
-			font-family: 'brandon';
+			font-family: 'Roboto';
 			font-size: 1.2em;
 			text-transform: uppercase;
+		}
+		a:before {
+			  content: "";
+			  position: absolute;
+			  width: 100%;
+			  height: 2px;
+			  bottom: 0;
+			  left: 0;
+			  background-color: #000;
+			  visibility: hidden;
+			  -webkit-transform: scaleX(0);
+			  transform: scaleX(0);
+			  -webkit-transition: all 0.3s ease-in-out 0s;
+			  transition: all 0.3s ease-in-out 0s;
+		}
+		a:hover:before {
+		  visibility: visible;
+		  -webkit-transform: scaleX(1);
+		  transform: scaleX(1);
 		}
 	}
 }
