--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -206,7 +206,9 @@ h1,h2,h3,h4 {
 .desktop-background {
 	background-image: url(../images/background/deskback.jpg);
 }
-
+h1,h2,h3 {
+	font-family: 'futura';
+}
 
 
 
