--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -79,7 +79,7 @@ body{
 	display: -o-flex;
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
+	// align-items: center;
 }
 .foot-child-cont {
 	display: -webkit-flex;
@@ -145,7 +145,8 @@ ul {
     }
   }
 h1,h2,h3,h4 {
-	font-family: 'brandon';
+	font-family: 'brandon', 'sans-serif';
+	color: #8bc53f;
 }
 .header-text  {
   text-shadow: 0px 0px 8px #000000;
@@ -206,13 +207,19 @@ h1,h2,h3,h4 {
 .desktop-background {
 	background-image: url(../images/background/deskback.jpg);
 }
-
-
-
-
-
-
-
+// Login Page
+.button-padding {
+	margin: 20px;
+}
+.card-pad {
+	padding: 60px 0 !important;
+}
+.login-margin {
+	margin-bottom: 100px;
+}
+.login-label {
+	font-size: 1.2em;
+}
 
 
 
