--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -81,7 +81,7 @@ body{
 	justify-content: space-around;
 	/*Might not use this box shadow*/
 	/*box-shadow:  0px -2px 7px  rgba(0, 0, 0, 0.15);*/
-	box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+	box-shadow:  0 -2px 4px 1px rgba(0, 0, 0, 0.3);
 
 	// align-items: center;
 }
